-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8.1
-
None
-
-
902058e75 (dev), e9509291a (6.9), bde58519b (6.8)
If the system fails the sysv_sem test, the compilation also fails:
[140/648] Building CXX object src/corelib/CMakeFiles/Core.dir/ipc/qsharedmemory.cpp.o
FAILED: src/corelib/CMakeFiles/Core.dir/ipc/qsharedmemory.cpp.o
/usr/bin/c++ -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_LEAN_HEADERS=1 -DQT_MOC_COMPAT -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT -DQT_NO_DEBUG -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_NO_QPAIR -DQT_NO_QSNPRINTF -DQT_NO_USING_NAMESPACE -DQT_TYPESAFE_FLAGS -DQT_USE_NODISCARD_FILE_OPEN -DQT_USE_QSTRINGBUILDER -D_GLIBCXX_ASSERTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/qtbase-6.8.1_host/src/corelib/Core_autogen/include -I/qtbase-6.8.1_host/include -I/qtbase-6.8.1_host/include/QtCore -I/qtbase/src/corelib -I/qtbase-6.8.1_host/src/corelib -I/qtbase-6.8.1_host/src/corelib/global -I/qtbase-6.8.1_host/src/corelib/kernel -I/qtbase/src/corelib/../3rdparty/tinycbor/src -I/qtbase-6.8.1_host/include/QtCore/6.8.1 -I/qtbase-6.8.1_host/include/QtCore/6.8.1/QtCore -I/qtbase/mkspecs/linux-g++ -isystem /usr/include/double-conversion -DNDEBUG -O3 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fexceptions -ffunction-sections -fdata-sections -msse2 -U_FORTIFY_SOURCE -Wsuggest-override -D_FORTIFY_SOURCE=3 -fstack-clash-protection -std=gnu++17 -Winvalid-pch -include /qtbase-6.8.1_host/src/corelib/CMakeFiles/Core.dir/cmake_pch.hxx -MD -MT src/corelib/CMakeFiles/Core.dir/ipc/qsharedmemory.cpp.o -MF src/corelib/CMakeFiles/Core.dir/ipc/qsharedmemory.cpp.o.d -o src/corelib/CMakeFiles/Core.dir/ipc/qsharedmemory.cpp.o -c /qtbase/src/corelib/ipc/qsharedmemory.cpp
In file included from /qtbase/src/corelib/ipc/qsharedmemory.cpp:5:
/qtbase/src/corelib/ipc/qsharedmemory_p.h: In instantiation of ‘QSharedMemoryPrivate::handle()::<lambda(auto:34)> [with auto:34 = QSharedMemorySystemV*]’:
/qtbase/src/corelib/ipc/qtipccommon_p.h:112:34: required from ‘static auto QtIpcCommon::IpcStorageVariant<Member1, Members>::visit_internal(StorageType&, QNativeIpcKey::Type, const Lambda&) [with Lambda = QSharedMemoryPrivate::handle()::<lambda(auto:34)>; auto Member1 = &QSharedMemoryPrivate::Backend::sysv; auto ...Members = {&QSharedMemoryPrivate::Backend::win32}; StorageType = QSharedMemoryPrivate::Backend]’
/qtbase/src/corelib/ipc/qtipccommon_p.h:115:69: required from ‘static auto QtIpcCommon::IpcStorageVariant<Member1, Members>::visit_internal(StorageType&, QNativeIpcKey::Type, const Lambda&) [with Lambda = QSharedMemoryPrivate::handle()::<lambda(auto:34)>; auto Member1 = &QSharedMemoryPrivate::Backend::posix; auto ...Members = {&QSharedMemoryPrivate::Backend::sysv, &QSharedMemoryPrivate::Backend::win32}; StorageType = QSharedMemoryPrivate::Backend]’
/qtbase/src/corelib/ipc/qtipccommon_p.h:125:30: required from ‘auto QtIpcCommon::IpcStorageVariant<Member1, Members>::visit(QNativeIpcKey::Type, const Lambda&) [with Lambda = QSharedMemoryPrivate::handle()::<lambda(auto:34)>; auto Member1 = &QSharedMemoryPrivate::Backend::posix; auto ...Members = {&QSharedMemoryPrivate::Backend::sysv, &QSharedMemoryPrivate::Backend::win32}]’
/qtbase/src/corelib/ipc/qsharedmemory_p.h:181:29: required from ‘auto QSharedMemoryPrivate::visit(const Lambda&) [with Lambda = QSharedMemoryPrivate::handle()::<lambda(auto:34)>]’
/qtbase/src/corelib/ipc/qsharedmemory_p.h:186:21: required from here
/qtbase/src/corelib/ipc/qsharedmemory_p.h:186:48: error: ‘class QSharedMemorySystemV’ has no member named ‘handle’
186 | return visit([&](auto p) { return !!p->handle(this); });
| ~~~^~~~~~