src/corelib/ipc/qsharedmemory_p.h
@@ -105,7 +105,7 @@ public:
     { return quint16(type) <= 0xff; }
     static bool runtimeSupportCheck();
 
-#if QT_CONFIG(sysv_sem)
+#if QT_CONFIG(sysv_shm)
     key_t handle(QSharedMemoryPrivate *self);
     bool cleanHandle(QSharedMemoryPrivate *self);
     bool create(QSharedMemoryPrivate *self, qsizetype size);
